--- a/ai_research_system/ai_methodology_system/templates/results.html
+++ b/ai_research_system/ai_methodology_system/templates/results.html
@@ -122,7 +122,7 @@
 {% endif %}
 
 <div class="mt-4">
-<a href="{% url 'upload_data' %}" class="btn btn-secondary">New Analysis</a>
+<a href="{% url 'index' %}" class="btn btn-secondary">New Analysis</a>
 <a href="{% url 'export_word' %}" class="btn btn-success">Download Word</a>
 </div>
 
